# aura

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  agents.md  docker-compose.production.yml  docker-compose.yml  flake.nix  searxng-settings.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  hf-space-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  publish-docker-image.yml
backend/: Cargo.toml  build.rs
backend/src/: anima_graph.json  auth.rs  circuit_breaker.rs  config.rs  duckduckgo.rs  grokipedia.rs  handlers.rs  inference.rs  invoke.rs  main.rs  merged.rs  sdxl_graph.json  search.rs  searxng.rs  status.rs  utils.rs  wikipedia.rs
docs/: README.md  ai-integration.md  configuration.md  conversation-memory.md  development-commands.md  glossary.md  overview.md  quick-start.md  reranking.md  search-history.md  security.md  ui-components.md
frontend/: Cargo.toml  index.html  style.css
frontend/src/: api.rs  api_invoke.rs  header.rs  i18n.rs  lib.rs  login.rs  main.rs  search_panel.rs  theme.rs  types.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  pt.rs  ru.rs  zh.rs
scripts/: mock_searxng.py
