[package]
name = "rust-search"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-full", "set-header"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
argon2 = "0.5"
futures-util = "0.3"
percent-encoding = "2.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.9", features = ["cookie"] }
sha2 = "0.10"
base64 = "0.22.1"

