[package]
name = "frontend"
version = "1.0.0"
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlInputElement", "Storage"] }
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
percent-encoding = "2.3"
js-sys = "0.3"




